--- a/package.json
+++ b/package.json
@@ -1,42 +1,41 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.1.3",
-    "react": "^18.1.0",
-    "react-bootstrap": "^2.3.1",
-    "react-dom": "^18.1.0",
-    "react-router-dom": "^5.3.1",
-    "react-scripts": "5.0.1",
-    "sass": "^1.51.0",
-    "web-vitals": "^2.1.4"
+  "name": "lz-string",
+  "version": "1.4.4",
+  "license": "WTFPL",
+  "filename": "lz-string.js",
+  "description": "LZ-based compression algorithm",
+  "homepage": "http://pieroxy.net/blog/pages/lz-string/index.html",
+  "keywords": [
+    "lz",
+    "compression",
+    "string"
+  ],
+  "main": "libs/lz-string.js",
+  "bin": {
+    "lz-string": "bin/bin.js"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "scripts": {},
+  "dependencies": {},
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pieroxy/lz-string.git"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "bugs": {
+    "url": "https://github.com/pieroxy/lz-string/issues"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "directories": {
+    "test": "tests"
+  },
+  "author": "pieroxy <pieroxy@pieroxy.net>",
+  "autoupdate": {
+     "source": "git",
+     "target": "git://github.com/pieroxy/lz-string.git",
+     "basePath": "libs/",
+     "files": [
+      "lz-string.js",
+      "lz-string.min.js",
+      "base64-string.js"
+     ]
+   }
 }
